# polymarket-daytrader-bot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml
scripts/: dev.sh
src/polymarket_bot/: __init__.py  __main__.py  main.py
src/polymarket_bot/config/: __init__.py  settings.py
src/polymarket_bot/core/: __init__.py  models.py
src/polymarket_bot/data/: __init__.py  market_listener.py
src/polymarket_bot/execution/: __init__.py  execution_engine.py
src/polymarket_bot/integrations/news/: __init__.py  client.py
src/polymarket_bot/integrations/polymarket/: __init__.py  client.py
src/polymarket_bot/integrations/x/: __init__.py  client.py
src/polymarket_bot/risk/: __init__.py  risk_manager.py
src/polymarket_bot/strategies/: __init__.py  base.py
src/polymarket_bot/utils/: __init__.py  logger.py
tests/: test_smoke.py
